--- a/cmmsApp/templates/header.html
+++ b/cmmsApp/templates/header.html
@@ -13,11 +13,21 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="{% static 'css/header.css' %}">
 
-
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TKQV8LKX');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body>
     {% include 'request_demo_modal.html' %}
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKQV8LKX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!--=============== HEADER ===============-->
 
     <header class="header">
@@ -59,28 +69,28 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/xgsafd/" class="dropdown__link">XGSA FD
+                                <a href="/xgsafd/" class="dropdown__link">XGSA FD (System Analysis in the Frequency Domain)
                                     <!-- <i class="ri-pie-chart-line"></i> -->
                                 </a>
                             </li>
                             <li>
-                                <a href="/xgsatd/" class="dropdown__link">XGSA TD
+                                <a href="/xgsatd/" class="dropdown__link">XGSA TD (System Analysis in the Time Domain)
                                     <!-- <i class="ri-pie-chart-line"></i> -->
                                 </a>
                             </li>
                             <li>
-                                <a href="/nets/" class="dropdown__link">NETS
+                                <a href="/nets/" class="dropdown__link">NETS (Network Solver)
                                     <!-- <i class="ri-arrow-up-down-line"></i>  -->
                                 </a>
                             </li>
                             <li>
-                                <a href="/sheild/" class="dropdown__link">SHEILD
+                                <a href="/sheild/" class="dropdown__link">SHEILD (Lightning Shielding)
                                     <!-- <i class="ri-pie-chart-line"></i> -->
                                 </a>
                             </li>
 
                             <li>
-                                <a href="/sheilda/" class="dropdown__link">SHEILD A
+                                <a href="/sheilda/" class="dropdown__link">SHEILD A (Lightning Shielding Advanced)
                                     <!-- <i class="ri-arrow-up-down-line"></i>  -->
                                 </a>
                             </li>
